--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
            ref: 'master'
-           
+       
+       ## Create Custom Metric in Dynatrace for Release Evaluation Score
       - name: create custom metric
         run: |
             curl -X PUT ${{ secrets.DT_API_URL }}/v1/timeseries/custom:releaseevaluationscore -H "Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}" -H "Content-Type: application/json" --data-binary @- <<DATA
@@ -38,7 +39,8 @@ jobs:
                 "warnings": []
             }
             DATA
-            
+      
+      ## Create Monaco Environment File
       - name: monaco create env file
         run: |
            cd cloudautomation/monaco
@@ -48,7 +50,7 @@ jobs:
                - env-url: "${{ secrets.DT_URL }}"
                - env-token-name: "DT_API_TOKEN"    
                
-    
+      # Run Monaco Import Management Zones
       - name: run Monaco
         run: | 
            export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
@@ -61,7 +63,7 @@ jobs:
             
       
       
-      - name: Uninstall Rancher if Exists
+      - name: Uninstall k3s if Exists
         run: k3s-uninstall.sh || true
       - name: install dynatrace Agent
         run: |        
@@ -69,8 +71,8 @@ jobs:
             wget https://ca.dynatrace.com/dt-root.cert.pem ; ( echo 'Content-Type: multipart/signed; protocol="application/x-pkcs7-signature"; micalg="sha-256"; boundary="--SIGNED-INSTALLER"'; echo ; echo ; echo '----SIGNED-INSTALLER' ; cat Dynatrace-OneAgent-Linux-1.241.212.sh ) | openssl cms -verify -CAfile dt-root.cert.pem > /dev/null
             /bin/sh Dynatrace-OneAgent-Linux-1.241.212.sh --set-infra-only=false --set-app-log-content-access=true --set-host-tag=tnt-acer-svc
 
-      # Runs a set of commands using the runners shell
-      - name: Install Rancher on AWS linux
+      ## Install K3s single node Kubernetes Cluster
+      - name: Install k3s on AWS linux
         run: |
           KUBECONFIG=/etc/rancher/k3s/k3s.yaml
           sudo yum update -y
@@ -80,6 +82,8 @@ jobs:
           sudo yum install tree -y
           cd /home/ec2-user/
           curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 64
+          
+      ## Install Dynatrace Active Gate on Kubernetes Cluster    
       - name: Install Dynatrace Active Gate
         run: |
             #!/bin/bash
@@ -143,7 +147,7 @@ jobs:
             sudo service docker start
             
 
-            
+        # Create Cloudautomation Projects    
       - name: create CA projects
         run: |
             curl -sL https://get.keptn.sh | bash
