--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -125,40 +125,46 @@ jobs:
           ca_token: ${{ secrets.CA_TOKEN }} 
           DG_EVALUATION_SCORE: $DG_EVALUATION_SCORE
         run: |
-          trigger_evaluation()
-          {
-          curl -X POST "${{secrets.DT_CA_URL}}/api/controlPlane/v1/project/deployment-gates/stage/production/service/tnt-acer-svc/evaluation" \
-          -H "accept: application/json; charset=utf-8" \
-          -H "x-token: $ca_token" \
-          -H "Content-Type: application/json; charset=utf-8" \
-          -d "{\"timeframe\": \"5m\", \"labels\":{\"buildId\":\"${{ needs.Open-Tracking-Issue.outputs.output2 }}\", \"evaltime\":\"$(date +%s%3N)\"}}" \
-          -o "keptnContext.json"
-          keptnContext=$(cat keptnContext.json | jq -r '.keptnContext')
-          echo "Keptn context: $keptnContext"
-          echo $keptnContext
-          }
-          trigger_evaluation
-          DG_EVALUATION_RESULT=""
-          DG_EVALUATION_SCORE=""
-          DG_EVALUATION_SCORE=$(curl -X GET "${{secrets.DT_CA_URL}}/api/mongodb-datastore/event?keptnContext=$keptnContext&&type=sh.keptn.event.evaluation.finished" \
-              -H "accept: application/json; charset=utf-8" \
-              -H "x-token: $ca_token" | jq -r '.events[0].data.evaluation.score')
-          echo $DG_EVALUATION_SCORE
-          while [[ "$DG_EVALUATION_SCORE" == null ]]
-          do
-              DG_EVALUATION_SCORE=$(curl -X GET "${{secrets.DT_CA_URL}}/api/mongodb-datastore/event?keptnContext=$keptnContext&&type=sh.keptn.event.evaluation.finished" \
-                  -H "accept: application/json; charset=utf-8" \
-                  -H "x-token: $ca_token" | jq  '.events[0].data.evaluation.score')
-              sleep 10
-          done
-          startdate=$(date -d "$TIME + 125min" +"%Y-%m-%dT%H:%M:%S")
-          enddate=$(date -d "$TIME + 120min" +"%Y-%m-%dT%H:%M:%S")
-          echo $DG_EVALUATION_SCORE
-          echo "DG_EVALUATION_SCORE=$DG_EVALUATION_SCORE" >> "$GITHUB_ENV"
-          echo "kepncontext=$keptnContext" >> "$GITHUB_ENV"
-          echo "startdate=$startdate" >> "$GITHUB_ENV"
-          echo "enddate=$enddate" >> "$GITHUB_ENV" 
-          sleep 50
+           trigger_evaluation()
+                {
+                curl -X POST "${{secrets.DT_CA_URL}}/api/controlPlane/v1/project/deployment-gates/stage/production/service/tnt-acer-svc/evaluation" \
+                -H "accept: application/json; charset=utf-8" \
+                -H "x-token: $ca_token" \
+                -H "Content-Type: application/json; charset=utf-8" \
+                -d "{\"timeframe\": \"5m\", \"labels\":{\"buildId\":\"${{ needs.Open-Tracking-Issue.outputs.output2 }}\", \"evaltime\":\"$(date +%s%3N)\"}}" \
+                -o "keptnContext.json"
+                keptnContext=$(cat keptnContext.json | jq -r '.keptnContext')
+                echo "Keptn context: $keptnContext"
+                echo $keptnContext
+                }
+
+               DG_EVALUATION_SCOREX=0
+               while [[ "$DG_EVALUATION_SCOREX" < 89 ]]
+                  do     
+                      trigger_evaluation
+                      DG_EVALUATION_RESULT=""
+                      DG_EVALUATION_SCORE=""
+                      DG_EVALUATION_SCORE=$(curl -X GET "${{secrets.DT_CA_URL}}/api/mongodb-datastore/event?keptnContext=$keptnContext&&type=sh.keptn.event.evaluation.finished" \
+                          -H "accept: application/json; charset=utf-8" \
+                          -H "x-token: $ca_token" | jq -r '.events[0].data.evaluation.score')
+                      echo $DG_EVALUATION_SCORE
+                      while [[ "$DG_EVALUATION_SCORE" == null ]]
+                      do
+                          DG_EVALUATION_SCORE=$(curl -X GET "${{secrets.DT_CA_URL}}/api/mongodb-datastore/event?keptnContext=$keptnContext&&type=sh.keptn.event.evaluation.finished" \
+                              -H "accept: application/json; charset=utf-8" \
+                              -H "x-token: $ca_token" | jq  '.events[0].data.evaluation.score')
+                          sleep 10
+                      done
+                      startdate=$(date -d "$TIME + 125min" +"%Y-%m-%dT%H:%M:%S")
+                      enddate=$(date -d "$TIME + 120min" +"%Y-%m-%dT%H:%M:%S")
+                      DG_EVALUATION_SCOREX=
+                      echo $DG_EVALUATION_SCORE=$DG_EVALUATION_SCORE
+                      echo "DG_EVALUATION_SCORE=$DG_EVALUATION_SCORE" >> "$GITHUB_ENV"
+                      echo "kepncontext=$keptnContext" >> "$GITHUB_ENV"
+                      echo "startdate=$startdate" >> "$GITHUB_ENV"
+                      echo "enddate=$enddate" >> "$GITHUB_ENV" 
+                  done
+            sleep 50
       - id: passvariable
         run: |
              echo "::set-output name=DG_EVALUATION_SCORE::${{ env.DG_EVALUATION_SCORE }}"
