--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
            ref: 'master'
-           
+       
+       ## Create Custom Metric in Dynatrace for Release Evaluation Score
       - name: create custom metric
         run: |
             curl -X PUT ${{ secrets.DT_API_URL }}/v1/timeseries/custom:releaseevaluationscore -H "Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}" -H "Content-Type: application/json" --data-binary @- <<DATA
@@ -38,28 +39,8 @@ jobs:
                 "warnings": []
             }
             DATA
-            
-            
-      - name: monaco create env file
-        run: |
-           cd cloudautomation/monaco
-           cat << EOF > environments.yaml
-           demo:
-               - name: "demozones"
-               - env-url: "${{ secrets.DT_URL }}"
-               - env-token-name: "DT_API_TOKEN"    
-               
-      - name: run Monaco
-        run: | 
-           export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
-           cd cloudautomation/monaco
-           curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
-           chmod +x monaco
-           # deploy repo folder
-           sudo mv monaco /usr/local/bin/
-           monaco --environments=environments.yaml -p demozones             
- 
-           
+      
+      ## Create Monaco Environment File
       - name: monaco create env file
         run: |
            cd cloudautomation/monaco
@@ -69,7 +50,7 @@ jobs:
                - env-url: "${{ secrets.DT_URL }}"
                - env-token-name: "DT_API_TOKEN"    
                
-    
+      # Run Monaco Import Management Zones
       - name: run Monaco
         run: | 
            export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
@@ -78,11 +59,11 @@ jobs:
            chmod +x monaco
            # deploy repo folder
            sudo mv monaco /usr/local/bin/
-           monaco --environments=environments.yaml -p demo
+           monaco --environments=environments.yaml
             
       
       
-      - name: Uninstall Rancher if Exists
+      - name: Uninstall k3s if Exists
         run: k3s-uninstall.sh || true
       - name: install dynatrace Agent
         run: |        
@@ -90,8 +71,8 @@ jobs:
             wget https://ca.dynatrace.com/dt-root.cert.pem ; ( echo 'Content-Type: multipart/signed; protocol="application/x-pkcs7-signature"; micalg="sha-256"; boundary="--SIGNED-INSTALLER"'; echo ; echo ; echo '----SIGNED-INSTALLER' ; cat Dynatrace-OneAgent-Linux-1.241.212.sh ) | openssl cms -verify -CAfile dt-root.cert.pem > /dev/null
             /bin/sh Dynatrace-OneAgent-Linux-1.241.212.sh --set-infra-only=false --set-app-log-content-access=true --set-host-tag=tnt-acer-svc
 
-      # Runs a set of commands using the runners shell
-      - name: Install Rancher on AWS linux
+      ## Install K3s single node Kubernetes Cluster
+      - name: Install k3s on AWS linux
         run: |
           KUBECONFIG=/etc/rancher/k3s/k3s.yaml
           sudo yum update -y
@@ -101,6 +82,8 @@ jobs:
           sudo yum install tree -y
           cd /home/ec2-user/
           curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 64
+          
+      ## Install Dynatrace Active Gate on Kubernetes Cluster    
       - name: Install Dynatrace Active Gate
         run: |
             #!/bin/bash
@@ -164,26 +147,17 @@ jobs:
             sudo service docker start
             
 
-            
-#      - name: create CA projects
-#        run: |
-#            curl -sL https://get.keptn.sh | bash
-#            keptn auth --endpoint=${{secrets.DT_CA_URL}}/api --api-token=${{ secrets.CA_TOKEN}} 
-#            keptn create project slo-evaluation --shipyard=cloudautomation/shipyard.yaml
-#            keptn create service tnt-acer-svc --project=slo-evaluation
-#            keptn add-resource --project=slo-evaluation --all-stages --service=tnt-acer-svc --resource=cloudautomation/dynatrace/dynatrace.conf.yaml --resourceUri=dynatrace/dynatrace.conf.yaml
-#            keptn create project deployment-gates --shipyard=cloudautomation/deploymentgates/shipyard.yaml
-#            keptn create service tnt-acer-svc --project=deployment-gates
-#            keptn add-resource --project=deployment-gates --all-stages --service=tnt-acer-svc --resource=cloudautomation/dynatrace/dynatrace.conf.yaml --resourceUri=dynatrace/dynatrace.conf.yaml 
-
-
-      - name: get dashboard variables
+        # Create Cloudautomation Projects    
+      - name: create CA projects
         run: |
-             echo "Workflow Variables to set"
-             echo "DT_URL=${{ secrets.DT_URL }}""
-             echo "DT_DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc'))| .[0].id')"
-             echo "DT_STAGING_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc'))| .[0].id')"
-             echo "DT_PROD_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=prodg;service=tnt-acer-svc'))| .[0].id')"
-             echo "DT_PRE_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=deployment-gates;stage=production;service=tnt-acer-svc'))| .[0].id')"
+            curl -sL https://get.keptn.sh | bash
+            keptn auth --endpoint=${{secrets.DT_CA_URL}}/api --api-token=${{ secrets.CA_TOKEN}} 
+            keptn create project slo-evaluation --shipyard=cloudautomation/shipyard.yaml
+            keptn create service tnt-acer-svc --project=slo-evaluation
+            keptn add-resource --project=slo-evaluation --all-stages --service=tnt-acer-svc --resource=cloudautomation/dynatrace/dynatrace.conf.yaml --resourceUri=dynatrace/dynatrace.conf.yaml
+            keptn create project deployment-gates --shipyard=cloudautomation/deploymentgates/shipyard.yaml
+            keptn create service tnt-acer-svc --project=deployment-gates
+            keptn add-resource --project=deployment-gates --all-stages --service=tnt-acer-svc --resource=cloudautomation/dynatrace/dynatrace.conf.yaml --resourceUri=dynatrace/dynatrace.conf.yaml 
 
+            
             
