--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -139,7 +139,7 @@ jobs:
                 }
 
                DG_EVALUATION_SCOREX=0
-               while [[ "$DG_EVALUATION_SCOREX" < 89 ]]
+               while [[ $DG_EVALUATION_SCOREX < 89 ]]
                   do     
                       trigger_evaluation
                       DG_EVALUATION_RESULT=""
@@ -157,7 +157,8 @@ jobs:
                       done
                       startdate=$(date -d "$TIME + 125min" +"%Y-%m-%dT%H:%M:%S")
                       enddate=$(date -d "$TIME + 120min" +"%Y-%m-%dT%H:%M:%S")
-                      DG_EVALUATION_SCOREX=$DG_EVALUATION_SCORE
+                      export DG_EVALUATION_SCOREX=$DG_EVALUATION_SCORE
+                      echo $DG_EVALUATION_SCOREX
                       echo $DG_EVALUATION_SCORE
                       echo "DG_EVALUATION_SCORE=$DG_EVALUATION_SCORE" >> "$GITHUB_ENV"
                       echo "kepncontext=$keptnContext" >> "$GITHUB_ENV"
