--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -199,7 +199,7 @@ jobs:
         uses: rbhadti94/apache-jmeter-action@v0.5.0
         with:
           testFilePath: jmeter/basiccheck.jmx
-          outputReportsFolder: home/ec2-user/reports
+          outputReportsFolder: /reports
         
       - name: Stress-Simulation-Cpu
         if: "contains(github.event.head_commit.message, 'faildev')"
