--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -194,13 +194,24 @@ jobs:
       - name: set test start time
         id: set_start_time
         run: echo "::set-output name=startdate::$(date -d "$TIME - 5min" +"%Y-%m-%dT%H:%M:%S")"
-
-      - name: Run JMeter Tests
-        uses: rbhadti94/apache-jmeter-action@v0.5.0
-        with:
-          testFilePath: jmeter/basiccheck.jmx
-          outputReportsFolder: /reports
         
+
+      - name: install jmeter
+        run: |
+          java -version
+          wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-5.4.1.zip
+          unzip apache-jmeter-5.4.1.zip
+          cd apache-jmeter-5.4.1/bin
+          ./jmeter -v
+          pwd     
+ 
+      - name: run jmx scripts
+        run: |
+         cd $GITHUB_WORKSPACE
+         cd $GITHUB_WORKSPACE/apache-jmeter-5.4.1/bin
+         ./jmeter -n -t jmeter/basiccheck.jmx -l testreport.jtl
+
+         
       - name: Stress-Simulation-Cpu
         if: "contains(github.event.head_commit.message, 'faildev')"
         run: |
