--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -198,6 +198,7 @@ jobs:
 
       - name: install jmeter
         run: |
+          sudo amazon-linux-extras install java-openjdk11
           java -version
           wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-5.4.1.zip
           unzip apache-jmeter-5.4.1.zip
