--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -200,8 +200,8 @@ jobs:
         run: |
           sudo amazon-linux-extras install java-openjdk11
           java -version
-          wget https://dlcdn.apache.org//jmeter/binaries/apache-jmeter-5.5.tgz
-          unzip apache-jmeter-5.5.tgz
+          wget https://downloads.apache.org/jmeter/binaries/apache-jmeter-5.5.zip
+          unzip apache-jmeter-5.5.zip
           cd apache-jmeter-5.5/bin
           ./jmeter -v
           pwd     
