--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -210,7 +210,7 @@ jobs:
         run: |
          cd $GITHUB_WORKSPACE
          cd $GITHUB_WORKSPACE/apache-jmeter-5.5/bin
-         ./jmeter -n -t jmeter/basiccheck.jmx -l testreport.jtl
+         ./jmeter -n -t $GITHUB_WORKSPACE/jmeter/basiccheck.jmx -l testreport.jtl
 
          
       - name: Stress-Simulation-Cpu
