--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -158,12 +158,12 @@ jobs:
           outputReportsFolder: reports/
           args: "--loglevel INFO"
           
-      - name: Run JMeter Action on a test
-        uses: rbhadti94/apache-jmeter-action@v0.5.0
-        with:
-          testFilePath: jmeter/simplenodeservice_perfcheck.jmx
-          outputReportsFolder: reports/
-          args: "--loglevel INFO"
+      - name: run jmx scripts
+        run: |
+         cd $GITHUB_WORKSPACE
+         cd $GITHUB_WORKSPACE/apache-jmeter-5.5/bin
+         ./jmeter -n -t $GITHUB_WORKSPACE/jmeter/simplenodeservice_load.jmx -l testreport.jtl
+         ./jmeter -n -t $GITHUB_WORKSPACE/jmeter/Update simplenodeservice_perfcheck.jmx -l testreport.jtl
           
       - name: set var
         run: |
