--- a/cloudautomation/monaco/demo/dashboard/ReleaseTrends.json
+++ b/cloudautomation/monaco/demo/dashboard/ReleaseTrends.json
@@ -322,7 +322,7 @@
     "width": 342
    },
    "configured": true,
-   "markdown": "### Environments\n\n+ [ 🔧 Dev](http://54.145.28.46:8000/) \n+ [ 🚦 Staging](http://54.145.28.46:8001/) \n+ [ 💵 Prod](http://54.145.28.46:8002/) \n+ [ 🚢 Kubernetes Cluster](/ui/kubernetes/KUBERNETES_CLUSTER-E666B3BF740C4848?gtf=-2h\u0026gf=all) \n",
+   "markdown": "### Environments\n\n+ [ 🔧 Dev](http://{{ .Env.PUB_IP }}:8000/) \n+ [ 🚦 Staging](http://{{ .Env.PUB_IP }}:8001/) \n+ [ 💵 Prod](http://{{ .Env.PUB_IP }}:8002/) \n+ [ 🚢 Kubernetes Cluster](/ui/kubernetes/KUBERNETES_CLUSTER-E666B3BF740C4848?gtf=-2h\u0026gf=all) \n",
    "name": "Markdown",
    "nameSize": null,
    "tileFilter": {
@@ -339,7 +339,7 @@
     "width": 342
    },
    "configured": true,
-   "markdown": "### Slo Dashboards\n+ [ 🚦 Slo-Evaluation Dev](#dashboard;gtf=-24h%20to%20now;gf=2462787389709860009;id=76196020-e322-42c2-bc82-f7868171247e)\n+ [ 🚦 Slo-Evaluation Staging](#dashboard;gtf=-2h;gf=2462787389709860009;id=e061a600-0a14-423f-a163-557d402b0bbe)\n+ [ 🚦 Slo-Evaluation Prod](#dashboard;gtf=-2h;gf=2462787389709860009;id=9d789d18-f896-4cb5-bb34-bb1db6300ee0)\n+ [ 🚦 Prod Pre-Deployment Check](#dashboard;gtf=-2h;gf=2462787389709860009;id=478904d7-a456-4c49-9ad2-15da8ec7bb66)\n",
+   "markdown": "### Slo Dashboards\n+ [ 🚦 Slo-Evaluation Dev](#dashboard;gtf=-24h%20to%20now;gf={{ .Env.MGM_ZN }};id={{ .Env.DEV_DB_ID }})\n+ [ 🚦 Slo-Evaluation Staging](#dashboard;gtf=-2h;gf={{ .Env.MGM_ZN }};id={{ .Env.STAGING_DB_ID }})\n+ [ 🚦 Slo-Evaluation Prod](#dashboard;gtf=-2h;gf={{ .Env.MGM_ZN }};id={{ .Env.PROD_DB_ID }})\n+ [ 🚦 Prod Pre-Deployment Check](#dashboard;gtf=-2h;gf={{ .Env.MGM_ZN }};id={{ .Env.PRE_PROD_DB_ID }})\n",
    "name": "Markdown",
    "nameSize": null,
    "tileFilter": {
