--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -279,7 +279,7 @@ jobs:
 
           get_deployment_event_body()
           {
-          cat <<EOF
+            cat <<EOF
           {
           "eventType": "CUSTOM_DEPLOYMENT",
           "title": "Testevent",
@@ -292,10 +292,9 @@ jobs:
           "dt.event.deployment.project": "${{env.GITHUB_PROJECT_URL}}",
           "dt.event.deployment.ci_back_link": "${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}", 
           "dt.event.deployment.remediation_action_link": "${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}",
-          "dt.event.deployment.release_build_version": "${{ github.run_number }}"
-                        }
+          "dt.event.deployment.release_build_version": "${{ github.run_number }}"                        }
           }
-          EOF
+            EOF
           }
 
           send_deployment_event_to_dynatrace()
