--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -297,9 +297,9 @@ jobs:
           "dt.event.deployment.release_stage": "dev",
           "dt.event.deployment.release_product": "Pacmanserivce",
           "dt.event.deployment.project": "${{env.GITHUB_PROJECT_URL}}",
-          "dt.event.deployment.ci_back_link": "${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}", 
+          "dt.event.deployment.ci_back_link": "${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}",
           "dt.event.deployment.remediation_action_link": "${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}",
-          "dt.event.deployment.release_build_version": "${{ github.run_number }}"                        }
+          "dt.event.deployment.release_build_version": "${{ github.run_number }}"
           }'
           }
           }
