--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -279,9 +279,10 @@ jobs:
 
           send_deployment_event_to_dynatrace()
           {
-          export entityIds=$(curl -X GET "${{ secrets.DT_API_URL }}/v2/entities?entitySelector=type(%22PROCESS_GROUP_INSTANCE%22),tag(%22environment:simplenodeservice-dev%22)" -H "Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}")
+          export entityIds=$(curl -X GET "${{ secrets.DT_API_URL }}/v2/entities?entitySelector=type(%22PROCESS_GROUP_INSTANCE%22),tag(%22environment:simplenodeservice-dev%22),tag(%22[Environment]DT_RELEASE_VERSION:${{ github.run_number }}%22)" -H "Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}")
           echo $entityIds
           export entityId1=$(echo $entityIds | jq -r '.entities[0].entityId')
+          export entityId2=$(echo $entityIds | jq -r '.entities[1].entityId')
 
           curl -X POST "${{ secrets.DT_API_URL }}/v2/events/ingest" \
           -H "accept: application/json" \
@@ -290,7 +291,7 @@ jobs:
           -d '{
           "eventType": "CUSTOM_DEPLOYMENT",
           "title": "Testevent",
-          "entitySelector":  "type(PROCESS_GROUP_INSTANCE),tag(%22environment:simplenodeservice-dev%22)",
+          "entitySelector":  "type(PROCESS_GROUP_INSTANCE),entityId($entityId1,$entityId2)",
           "properties": {
           "dt.event.deployment.name": "Deployment of Pacmanservice",
           "dt.event.deployment.version": "${{ github.run_number }}",
